--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.9"
+    "@astrojs/vue": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.9",
+    "photoswipe": "^5.4.4",
+    "swiper": "^11.2.10",
+    "tailwindcss": "^4.1.11",
+    "vue": "^3.5.18"
   }
 }
